# adamOS

./: .gitignore  Cargo.toml  Makefile  boot.asm  grub.cfg  x86_64-unknown-adamos-gnu.json  x86_64-unknown-adamos.json
.cargo/: config.toml
src/: kmain.rs  lib.rs  saftey.rs  vga_buffer.rs
src/asm/: boot.asm  grub.cfg
