[package]
authors = ["Azphelumbra <azphel@nothing.com>"]
edition = "2018"
name = "adamos"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

# [dependencies.lazy_static]
# version = "1.4"
# features = ["spin_no_std"]